@@ -1,0 +1,25 @@
+# Config file for Morepath in YAML format
+
+chameleon:
+  debug: true
+
+jinja2:
+  auto_reload: false
+  autoescape: true
+  extensions:
+    - jinja2.ext.autoescape
+    - jinja2.ext.i18n
+
+jwtauth:
+  algorithm: ES256
+  leeway: 20
+  public_key:
+    "MIGbMBAGByqGSM49AgEGBSuBBAAjA4GGAAQBWcJwPEAnS/k4kFgUhxNF7J0SQQhZG+nNgy\
+    +/mXwhQ5PZIUmId1a1TjkNXiKzv6DpttBqduHbz/V0EtH+QfWy0B4BhZ5MnTyDGjcz1DQqK\
+    dexebhzobbhSIZjpYd5aU48o9rXp/OnAnrajddpGsJ0bNf4rtMLBqFYJN6LOslAB7xTBRg="
+
+sqlalchemy:
+  url: 'sqlite:///morepath.db'
+
+transaction:
+  attempts: 2
