@@ -37,10 +37,13 @@ setup(
         'importscan',
     ],
     extras_require=dict(
-        test=['pytest >= 2.5.2',
-              'py >= 1.4.20',
-              'pytest-cov',
-              'pytest-remove-stale-bytecode',
-              'WebTest >= 2.0.14'],
+        test=[
+            'pytest >= 2.5.2',
+            'py >= 1.4.20',
+            'pytest-cov',
+            'pytest-remove-stale-bytecode',
+            'WebTest >= 2.0.14',
+            'pyyaml',
+        ],
     ),
 )
